saint-lascivious.github.io: introduce devdiary.html
 - split out dev diary series to its own page

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - new file:   .formatted/devdiary.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - new file:   devdiary.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   portsandprotocols.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -150,7 +150,7 @@
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Pokémon #265</b></a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon265">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Pokémon #265</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
         <nav class="mdl-navigation mdl-layout--large-screen-only">
