--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -137,7 +137,7 @@
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="#frequentlyaskedquestions"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</b></a>
+          <a class="embiggen mdl-navigation__link" href="#frequentlyaskedquestions">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>FAQ</b></a>
           <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
