--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -145,7 +145,7 @@
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</a>
           <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Connect to Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="#portsandprotocols"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</b></a>
+          <a class="embiggen mdl-navigation__link" href="#portsandprotocols">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Ports and Protocols</b></a>
           <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
           <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</a>
