--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -146,7 +146,7 @@
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
           <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="#reportaproblem"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</b></a>
+          <a class="embiggen mdl-navigation__link" href="#reportaproblem">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Report a Problem</b></a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
