--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -142,7 +142,7 @@
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="#connecttosainternet"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Connect to Sainternet</b></a>
+          <a class="embiggen mdl-navigation__link" href="#connecttosainternet">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Connect to Sainternet</b></a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
           <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
