--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -144,7 +144,7 @@
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</a>
           <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="#technologies"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</b></a>
+          <a class="embiggen mdl-navigation__link" href="#technologies">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Technologies</b></a>
           <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
