--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -27,7 +27,7 @@
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
 
-    <meta name="theme-color" content="#607D8B">
+    <meta name="theme-color" content="#9E9E9E">
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -56,8 +56,8 @@
 
     <link rel="canonical" href="https://sainternet.xyz/archive.html">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.blue_grey-red.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.blue_grey-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.grey-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.grey-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
@@ -160,7 +160,7 @@
           <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
-      <div class="ribbon blue_grey-ribbon"></div>
+      <div class="ribbon grey-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
