saint-lascivious.github.io: update faq, minor formatting
Changes to be committed:
 - modified:   .formatted/archive.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   archive.html
 - modified:   devdiary.html
 - modified:   frequentlyaskedquestions.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js

--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -156,7 +156,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#whatswithalltherainbows">What’s with All the Rainbows?</a>, <a class="embiggen" href="#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a>, <a class="embiggen" href="#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a>, <a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#yourispisokwiththis">Your ISP Is OK with This?</a>, <a class="embiggen" href="#whatswithalltherainbows">What’s with All the Rainbows?</a>, <a class="embiggen" href="#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a>, <a class="embiggen" href="#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a>, <a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
             </div>
           </div>
         </div>
@@ -165,7 +165,28 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Frequently Asked Questions</span></h3>
             <p>
-              Answers to some frequently asked questions regarding Sainternet Filtered DNS.
+              Answers to some frequently asked questions regarding <code>dns.sainternet.xyz</code> and <code>sainternet.xyz</code>.
+            </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="yourispisokwiththis">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Your ISP Is OK with This?</span></h3>
+            <p class="embiggen sainternet-subheader-centered">
+              This Is Residential, Right?
+            </p>
+            <p>
+              Yes.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              How Is Your ISP Possibly OK with This?
+            </p>
+            <p>
+              I honestly have no idea.
+            </p>
+            <p>
+              Historically my ISP has been quite progressive, and they have also been willing to work with me. I suspect they're not so much "OK" with the <code>dns.sainternet.xyz</code> research resolver, as they not "not OK" with it."
             </p>
            </div>
         </div>
