saint-lascivious.github.io: navbar/crumbs formatting consistency
Changes to be committed:
 - modified:   .formatted/404.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/newsandupdates.html
 - modified:   404.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   newsandupdates.html

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -150,7 +150,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="404.html">Pokémon #404</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
+              <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
             </div>
           </div>
         </div>
