--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -165,7 +165,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="pokedexoverdns.html">Pokédex over DNS</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
+              <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
