--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -62,6 +62,8 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/shadow-boxing.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/shadow-boxing.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/table.min.css">
     <link rel="stylesheet" href="resources/stylesheets/table.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
@@ -173,6 +175,7 @@
             <p>
               Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
+            <div class="enlift rounded-corners shadow-boxing">
             <table>
               <tr>
                 <th>Transport</th>
@@ -210,6 +213,7 @@
                 <td>UDP <code>853</code></td>
               </tr>
             </table>
+            </div>
           </div>
         </div>
       </main>
