--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -66,6 +66,8 @@
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/shadow-boxing.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/shadow-boxing.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
     <link rel="stylesheet" href="resources/stylesheets/mono.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
@@ -173,14 +175,16 @@
             <p>
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
             </p>
-            <a href="265.html" class="subterfuge">
-              <picture>
-                <source srcset="resources/images/terminal.webp" type="image/webp">
-                <source srcset="resources/images/terminal.png" type="image/png">
-                <source srcset="resources/images/terminal.jpg" type="image/jpeg">
-                <img src="resources/images/terminal.jpg" width="820" height="480" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz">
-            </picture>
-            </a>
+            <div class="enlift shadow-boxing">
+              <a href="265.html" class="subterfuge">
+                <picture>
+                  <source srcset="resources/images/terminal.webp" type="image/webp">
+                  <source srcset="resources/images/terminal.png" type="image/png">
+                  <source srcset="resources/images/terminal.jpg" type="image/jpeg">
+                  <img src="resources/images/terminal.jpg" width="820" height="480" alt="Example Pokédex-over-DNS query using nslookup and dig utilities from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz, dig +short txt wurmple.pokedex @dns.sainternet.xyz">
+              </picture>
+              </a>
+            </div>
             <p>
               This fun little (<i>ab</i>)use of DNS allows one to query a Pokémon species name (currently supported: US, JP, FR, DE) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: US, JP <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>, FR, DE).
             </p>
