--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -88,6 +88,8 @@
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/random_url.min.js">
     <script type="text/javascript" src="resources/javascript/random_url.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/motion_sickness.min.js">
+    <script type="text/javascript" src="resources/javascript/motion_sickness.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
@@ -115,7 +117,7 @@
     <link rel="dns-prefetch" href="github.com">
     <link rel="dns-prefetch" href="www.reddit.com">
   </head>
-  <body>
+  <body class="motion-sickness">
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
